# iris

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  out.html
src/: color.rs  color_bucket.rs  export.rs  main.rs  utils.rs
