[package]
name = "cliris"
version = "0.1.0"
edition = "2018"
authors = ["Andrej G. <code.andrej@gmail.com>"]
license = "MIT"
description = "A cli tool that creates color palettes from images using the median cut algorithm."
readme = "README.md"
homepage = "https://github.com/Kaesebrot84/iris"
repository = "https://github.com/Kaesebrot84/iris"
keywords = ["cli", "image", "color", "quantization"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
iris-lib = { version = "0.1.0", features = ["image"] }
